--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
         depends_on:
             - express
         volumes:
-            - ./frontend:/app
+            - ./frontend/:/app
             - frontendnodemodules:/app/node_modules
         container_name: frontend-container
 
@@ -23,16 +23,23 @@ services:
         depends_on:
             - cacher
         volumes:
-            - ./backend:/app
+            - ./backend/:/app
             - backendnodemodules:/app/node_modules
         container_name: backend-container
 
     cacher:
         image: redis
+        env_file:
+            - ./config/redis.env
+        command: ['redis-server', '/usr/local/etc/redis/redis.conf']
         ports:
             - 6379:6379
+        volumes:
+            - ./config/redis.conf:/usr/local/etc/redis/redis.conf
+            - redisdata:/data
         container_name: cache
 
 volumes:
     backendnodemodules: {}
     frontendnodemodules: {}
+    redisdata: {}
