--- a/backend/package.json
+++ b/backend/package.json
@@ -1,60 +1,60 @@
 {
-  "name": "urly-backend",
-  "version": "1.0.0",
-  "description": "the backend/server code for urly - a shortening service for urls",
-  "main": "build/server",
-  "scripts": {
-    "prestart": "tsc -p ./",
-    "start": "node build/server",
-    "lint": "eslint  ./src/**/*.ts",
-    "dev": "nodemon"
-  },
-  "keywords": [
-    "postgresql",
-    "graphql",
-    "typescript",
-    "express"
-  ],
-  "author": "Dan Bamikiya",
-  "license": "MIT",
-  "dependencies": {
-    "config": "^3.3.3",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
-    "express-winston": "^4.0.5",
-    "graphql": "^15.5.0",
-    "graphql-tag": "^2.11.0",
-    "helmet": "^4.4.1",
-    "knex": "^0.21.16",
-    "knex-migrate": "^1.7.4",
-    "nanoid": "^3.1.20",
-    "pg": "^8.5.1",
-    "postgraphile": "^4.10.0",
-    "redis": "^3.0.2",
-    "valid-url": "^1.0.9",
-    "winston": "^3.3.3",
-    "winston-transport-sentry-node": "^1.0.1",
-    "yup": "^0.32.8"
-  },
-  "devDependencies": {
-    "@types/config": "0.0.38",
-    "@types/cors": "^2.8.9",
-    "@types/express": "^4.17.11",
-    "@types/morgan": "^1.9.2",
-    "@types/node": "^14.14.22",
-    "@types/redis": "^2.8.28",
-    "@types/valid-url": "^1.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "eslint": "^7.18.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "graphql-playground-middleware-express": "^1.7.22",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
-  }
+	"name": "urly-backend",
+	"version": "1.0.0",
+	"description": "the backend/server code for urly - a shortening service for urls",
+	"main": "build/server",
+	"scripts": {
+		"prestart": "tsc -p ./",
+		"start": "node build/server",
+		"lint": "eslint  ./src/**/*.ts",
+		"dev": "nodemon -L"
+	},
+	"keywords": [
+		"postgresql",
+		"graphql",
+		"typescript",
+		"express"
+	],
+	"author": "Dan Bamikiya",
+	"license": "MIT",
+	"dependencies": {
+		"config": "^3.3.3",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"express-graphql": "^0.12.0",
+		"express-winston": "^4.0.5",
+		"graphql": "^15.5.0",
+		"graphql-tag": "^2.11.0",
+		"helmet": "^4.4.1",
+		"knex": "^0.21.16",
+		"knex-migrate": "^1.7.4",
+		"nanoid": "^3.1.20",
+		"pg": "^8.5.1",
+		"postgraphile": "^4.10.0",
+		"redis": "^3.0.2",
+		"valid-url": "^1.0.9",
+		"winston": "^3.3.3",
+		"winston-transport-sentry-node": "^1.0.1",
+		"yup": "^0.32.8"
+	},
+	"devDependencies": {
+		"@types/config": "0.0.38",
+		"@types/cors": "^2.8.9",
+		"@types/express": "^4.17.11",
+		"@types/morgan": "^1.9.2",
+		"@types/node": "^14.14.22",
+		"@types/redis": "^2.8.28",
+		"@types/valid-url": "^1.0.3",
+		"@typescript-eslint/eslint-plugin": "^4.14.1",
+		"@typescript-eslint/parser": "^4.14.1",
+		"eslint": "^7.18.0",
+		"eslint-config-standard": "^16.0.2",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-promise": "^4.2.1",
+		"graphql-playground-middleware-express": "^1.7.22",
+		"nodemon": "^2.0.7",
+		"ts-node": "^9.1.1",
+		"typescript": "^4.1.3"
+	}
 }
